# agent

./: GUI-Agent.docx  demo.html  paper2ppt_editable (2).pptx  verl_0.9.0_itemic_token与prompt随机后缀修改计划.md
distillwheel/: README.md  pyproject.toml
distillwheel/distillwheel/: __init__.py  cli.py
distillwheel/distillwheel/backends/: __init__.py
distillwheel/distillwheel/backends/swift/: __init__.py  adapter.py  checkpoint.py  data_writer.py  env.yaml  launcher.py  logparser.py  recipe_mapper.py
distillwheel/distillwheel/backends/verl/: __init__.py  adapter.py  checkpoint.py  data_writer.py  env.yaml  launcher.py  logparser.py  recipe_mapper.py
distillwheel/distillwheel/core/: __init__.py  adapter.py  checkpoint.py  envspec.py  errors.py  launcher.py  logparser.py  registry.py  router.py
distillwheel/distillwheel/core/ir/: __init__.py  metric.py  recipe.py  sample.py  validators.py
distillwheel/distillwheel/pipeline/: __init__.py  artifacts.py  orchestrator.py  preflight.py
distillwheel/distillwheel/tools/: __init__.py  setup_backend_envs.py
distillwheel/docs/: backend_smoke_tests.md  code_audit.md  metric_mapping.md
distillwheel/examples/smoke/: reward.py  swift_dpo.jsonl  swift_dpo.yaml  swift_sft.jsonl  swift_sft.yaml  verl_grpo.jsonl  verl_grpo.yaml  verl_opd.jsonl  verl_opd.yaml  verl_ppo.yaml  verl_rloo.yaml
distillwheel/tests/: conftest.py
distillwheel/tests/e2e/: test_mock_backend.py
distillwheel/tests/unit/: test_artifacts.py  test_checkpoint.py  test_cli.py  test_envspec.py  test_ir_recipe.py  test_ir_sample.py  test_launcher.py  test_logparsers.py  test_metric.py  test_no_framework_imports.py  test_registry_router.py  test_setup_backend_envs.py  test_smoke_examples.py  test_swift_backend.py  test_verl_backend.py
distillwheel/tools/: setup_backend_envs.py
