[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distillwheel"
version = "0.1.0"
description = "Training backend adapter framework — IR-based orchestration with subprocess-isolated backends (swift, verl)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DistillWheel" }]
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
verl = [
    "pyarrow>=14.0",
]

[project.scripts]
distillwheel = "distillwheel.cli:main"

[project.entry-points."distillwheel.backends"]
swift = "distillwheel.backends.swift"
verl = "distillwheel.backends.verl"

[tool.setuptools.packages.find]
include = ["distillwheel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
